--- a/app/src/main/res/layout/fragment_home_wonderful_ext.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_ext.xml
@@ -1,7 +1,9 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 android:clipChildren="true">
+
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -18,7 +20,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
             app:statusBarScrim="@android:color/transparent">
 
-            <include layout="@layout/fragment_home_wonderful_header" />
+            <include layout="@layout/fragment_home_wonderful_header"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -58,13 +60,14 @@
         <FrameLayout
             android:id="@+id/fLayout_empty_view_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/color_white">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rV_wonderful_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"/>
         </FrameLayout>
+
     </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.design.widget.CoordinatorLayout>
