--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rLayout_new_home_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".NewHomeActivity">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/rLayout_new_home_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".NewHomeActivity">
 
     <com.cylan.jiafeigou.widget.CustomViewPager
         android:id="@+id/vp_home_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/fLayout_new_home_bottom_menu" />
+        android:layout_above="@+id/fLayout_new_home_bottom_menu"/>
 
 
     <FrameLayout
@@ -35,29 +36,38 @@
                 android:checked="true"
                 android:drawableTop="@drawable/icon_bottom_clever_dog_selector"
                 android:paddingBottom="3dp"
-                android:text="@string/app_name" />
+                android:text="@string/app_name"/>
 
             <RadioButton
                 android:id="@+id/btn_home_wonderful"
                 style="@style/home_bottom_radio_style"
                 android:drawableTop="@drawable/icon_bottom_wonderful_selector"
                 android:paddingBottom="3dp"
-                android:text="@string/Tap2_TitleName" />
+                android:text="@string/Tap2_TitleName"/>
 
             <RadioButton
                 android:id="@+id/btn_home_mine"
                 style="@style/home_bottom_radio_style"
                 android:drawableTop="@drawable/icon_bottom_mine_selector"
                 android:paddingBottom="3dp"
-                android:text="@string/Tap3_TitleName" />
+                android:text="@string/Tap3_TitleName"/>
         </RadioGroup>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_d2d2d2" />
-    </FrameLayout>
+            android:background="@color/color_d2d2d2"/>
 
+        <com.cylan.jiafeigou.widget.wheel.TimeWheelView
+            android:id="@+id/wv_wonderful_timeline"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:background="@color/color_f6f9fa"
+            android:visibility="gone"
+            app:monthText_font="Medium"
+            />
+
+    </FrameLayout>
 
     <!--<RelativeLayout-->
     <!--android:id="@+id/fLayout_wonderful_timeline"-->
@@ -66,14 +76,6 @@
     <!--android:layout_alignParentBottom="true"-->
     <!--android:visibility="gone">-->
 
-    <com.cylan.jiafeigou.widget.wheel.TimeWheelView
-        android:id="@+id/wv_wonderful_timeline"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/color_f6f9fa"
-        android:visibility="gone"
-        />
 
     <!--<RelativeLayout-->
     <!--android:id="@+id/rLayout_time_line_hot"-->
