--- a/app/src/main/res/layout/layout_fragment_media_video_details.xml
+++ b/app/src/main/res/layout/layout_fragment_media_video_details.xml
@@ -1,21 +1,22 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:background="@color/color_black"
-    tools:ignore="ContentDescription">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_gravity="center"
+             android:background="@color/color_black"
+             tools:ignore="ContentDescription">
 
-    <com.cylan.photoview.PhotoView
-        android:id="@+id/details_album_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter" />
 
     <VideoView
         android:id="@+id/vv_play_video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:visibility="invisible"
+        android:layout_gravity="center"/>
+
+    <com.cylan.photoview.PhotoView
+        android:id="@+id/details_album_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"/>
 </FrameLayout>
