--- a/app/src/main/res/layout/fragment_safe_protection.xml
+++ b/app/src/main/res/layout/fragment_safe_protection.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lLayout_safe_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
@@ -32,12 +33,6 @@
         android:layout_marginRight="20dp"
         hunt:sv_title="@string/SECURE_TYPE" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/color_e8e8e8" />
 
     <FrameLayout
         android:id="@+id/fLayout_protection_sensitivity"
@@ -66,14 +61,14 @@
                 android:textColor="@color/color_8C8C8C"
                 android:textSize="13sp" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/color_e8e8e8" />
     </FrameLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/color_e8e8e8" />
 
     <FrameLayout
         android:id="@+id/fLayout_protection_warn_effect"
@@ -103,24 +98,29 @@
                 android:textColor="@color/color_8C8C8C"
                 android:textSize="13sp" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/color_e8e8e8" />
     </FrameLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/color_e8e8e8" />
-
-    <TextView
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/TIME"
-        android:textColor="@color/color_4b9fd5"
-        android:textSize="15sp" />
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/TIME"
+            android:textColor="@color/color_4b9fd5"
+            android:textSize="15sp" />
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/fLayout_protection_start_time"
@@ -149,14 +149,14 @@
                 android:textColor="@color/color_8C8C8C"
                 android:textSize="13sp" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/color_e8e8e8" />
     </FrameLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/color_e8e8e8" />
 
     <FrameLayout
         android:id="@+id/fLayout_protection_end_time"
@@ -185,14 +185,14 @@
                 android:textColor="@color/color_8C8C8C"
                 android:textSize="13sp" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/color_e8e8e8" />
     </FrameLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/color_e8e8e8" />
 
     <FrameLayout
         android:id="@+id/fLayout_protection_repeat_period"
@@ -222,5 +222,11 @@
                 android:textColor="@color/color_8C8C8C"
                 android:textSize="13sp" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/color_e8e8e8" />
     </FrameLayout>
 </LinearLayout>
