单个属性的msgpack转化出错

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -90,6 +90,7 @@
     <color name="color_3341B56A">#3341B56A</color>
     <color name="color_5e97df">#5e97df</color>
     <color name="color_84bcfb">#84bcfb</color>
+    <color name="color_2A3C58">#2A3C58</color>
 
 
     <color name="background_tab_pressed">#6633B5E5</color>
