--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -54,11 +54,12 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="13dp"
                 android:text="@string/Tap3_LogIn"
+                android:maxLength="8"
+                android:ellipsize="end"
                 android:textColor="@color/color_white"
                 android:textSize="19sp"
                 tools:ignore="HardcodedText" />
         </LinearLayout>
-
 
         <com.cylan.jiafeigou.widget.MsgBoxView
             android:id="@+id/tv_home_mine_msg_count"
@@ -76,7 +77,6 @@
 
     </FrameLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,7 +90,7 @@
             android:clickable="true"
             hunt:leftDrawable="@drawable/icon_mine_friend"
             hunt:rightDrawable="@drawable/list_icon_next"
-            hunt:text="亲朋好友"
+            hunt:text="@string/Tap3_Friends"
             hunt:textColor="@color/color_333333"
             hunt:textSize="16sp" />
 
