--- a/app/src/main/res/layout/fragment_home_mine__set_name.xml
+++ b/app/src/main/res/layout/fragment_home_mine__set_name.xml
@@ -27,7 +27,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="48dp"
-            android:text="修改昵称"
+            android:text="@string/ALIAS"
             android:textColor="@color/color_white"
             android:textSize="18sp" />
 
@@ -81,30 +81,6 @@
             android:layout_marginRight="20dp"
             android:src="@drawable/btn_login_clear_text"
             android:visibility="gone" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:visibility="invisible"
-        android:id="@+id/rl_send_pro_hint"
-        android:layout_marginTop="120dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ProgressBar
-            android:layout_centerHorizontal="true"
-            android:id="@+id/pro_send_hint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:textColor="@color/color_black"
-            android:text="loading..."
-            android:layout_below="@id/pro_send_hint"
-            android:id="@+id/tv_send_hint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
