--- a/app/src/main/res/layout/fragment_maglive_message.xml
+++ b/app/src/main/res/layout/fragment_maglive_message.xml
@@ -50,7 +50,7 @@
                 style="@style/information_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="设备"
+                android:text="@string/SETTINGS"
                 android:textColor="#4B9FD5"
                 android:textSize="14sp" />
 
@@ -154,29 +154,6 @@
             android:text="@string/Tap1_Magnetism_ClearRecord"
             android:textSize="16sp"
             android:textColor="@color/color_4b9fd5" />
-
-        <RelativeLayout
-            android:visibility="invisible"
-            android:id="@+id/rl_clear_pro_hint"
-            android:layout_marginTop="40dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ProgressBar
-                android:layout_centerHorizontal="true"
-                android:id="@+id/pro_clear_hint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:textColor="@color/color_black"
-                android:text="loading..."
-                android:layout_below="@id/pro_clear_hint"
-                android:id="@+id/tv_send_hint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
 
     </LinearLayout>
 
