--- a/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
+++ b/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
@@ -6,16 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.cylan.photoview.PhotoView
+    <ImageView
         android:id="@+id/iv_userinfo_big_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-    <ProgressBar
-        android:visibility="invisible"
-        android:layout_gravity="center"
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </FrameLayout>
